--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19623,10 +19623,18 @@ button.mileageseconday:hover {
 }
 
 .mailtext {
-  font-size: 16px !important;
+  font-size: 14px !important;
   font-weight: 500 !important;
   color: white;
   text-decoration: none;
+}
+
+.mailtext :hover{
+  font-size: 14px !important;
+  font-weight: 500 !important;
+  color: rgb(249, 30, 70);
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .apara {
